Fix visibiltiy of downtime tooltip on no-options methods

--- a/app/css/modal.styl
+++ b/app/css/modal.styl
@@ -1815,7 +1815,6 @@ $outline = #ddd;
       padding: 12px 0;
       height: 56px;
       line-height: 16px;
-      overflow: hidden;
     }
     .payment-option.item {
       width: auto;
